@@ -1,3 +1,8 @@
+2008-03-30  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/35740
+	* gfortran.dg/transpose_conjg_1.f90: New test.
+
 2008-03-29  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/35698
