@@ -1,3 +1,9 @@
+2008-03-30  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/35740
+	* resolve.c (resolve_function, resolve_call): If the procedure
+	is elemental do not look for noncopying intrinsics.
+
 2008-03-29  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/35698
